# LETI-RLLSFC

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
configs/experiments/debug/: config.yaml
configs/experiments/default/: config.yaml
configs/experiments/skewed/: config.yaml
resource/: .gitkeep  README.md
scripts/experiments/: export_adaptive_partitions.py  export_pruned_xz_order.py  generate_param_orders.py  merge_order_with_partitions.py  run_pipeline.py
scripts/preprocess/: generate_queries.py  similarity_matrix.py  split_query_datasets.py
src/: __init__.py  config.py
src/common/: __init__.py  costs.py  spatial.py
src/data/: __init__.py  synthetic_trajectory_factory.py  trajectory_loader.py
src/evaluation/: __init__.py  lsfc_evaluator.py  traversal_evaluator.py
src/features/: __init__.py  state_feature_builder.py  trajectory_statistics.py
src/indexing/: __init__.py  lsfc_loader.py  quadtree_cell.py  quadtree_index.py  quadtree_validator.py  signature_processor.py  traversal_encoder.py
src/rl/: __init__.py  order_formatter.py  order_formatter_utils.py  partition_formatter.py  pipeline.py  policy_agent.py  ppo_updater.py  replay_buffer.py  traversal_environment.py
src/storage/: __init__.py  base.py  disk_storage.py  memory_storage.py
src/training/: __init__.py  component_factory.py  signature_optimizer.py  training_state.py  traversal_trainer.py
src/utils/: __init__.py  bbox_converter.py  gpu_accelerator.py  logger.py  path_manager.py  signature.py  similarity_matrix.py  trajectory_geometry.py
(+7 files in other folders)
